--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 
 # dependencies
 /node_modules
+package-lock.json
 
 # testing
 /coverage
@@ -18,6 +19,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.idea
 
 npm-debug.log*
 yarn-debug.log*
